mrasero/ing-https.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: '*'
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  tls:
  - hosts:
    - '*'
    secretName: tls-kitecicom
